--- a/app/src/main/res/layout/activity_detail_chinese_history.xml
+++ b/app/src/main/res/layout/activity_detail_chinese_history.xml
@@ -8,6 +8,19 @@
     android:padding="10dp"
     tools:context=".DetailChineseHistoryActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+        <TextView
+            android:id="@+id/share_content"
+            android:layout_gravity="right"
+            android:layout_width="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            android:drawableRight="@drawable/share"/>
+    </LinearLayout>
+
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
