--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -4,4 +4,11 @@
         <item name="android:textSize">20sp</item>
         <item name="textFillColor">@color/black</item>
     </style>
+    <!-- 隐藏状态栏 -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:fitsSystemWindows">false</item>
+    </style>
+
 </resources>
