--- a/app/src/main/res/layout/layout_dialog_username_change.xml
+++ b/app/src/main/res/layout/layout_dialog_username_change.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/et_username_change"
+        android:id="@+id/et_nickname_change"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/frame_input"
