--- a/app/src/main/res/layout/activity_profile_drawer.xml
+++ b/app/src/main/res/layout/activity_profile_drawer.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".bean.ProfileDrawerActivity">
 
+
+    <ImageView
+        android:id="@+id/img_cover"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/cover_default" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <ImageView
-            android:id="@+id/img_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/profile_shape"
-        android:layout_weight="3">
+        android:layout_height="2000dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="229dp"
+        android:background="@drawable/rounded_background">
 
     </LinearLayout>
 
-</LinearLayout>
+
+
+</RelativeLayout>
