--- a/app/src/main/res/layout/fragment_world_history.xml
+++ b/app/src/main/res/layout/fragment_world_history.xml
@@ -4,7 +4,27 @@
     android:layout_height="match_parent"
     tools:context="fragment.WorldHistoryFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        >
+        <Spinner
+            android:id="@+id/continent"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"/>
+        <Spinner
+            android:id="@+id/country"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
     <ListView
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview"/>
