--- a/app/src/main/res/layout/layout_listview_dynasty.xml
+++ b/app/src/main/res/layout/layout_listview_dynasty.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
   <ImageView
       android:id="@+id/img_dynasty"
+      android:scaleType="centerCrop"
       android:layout_width="100dp"
       android:layout_height="100dp"/>
     <LinearLayout
