--- a/app/src/main/res/layout/fragment_common_sense.xml
+++ b/app/src/main/res/layout/fragment_common_sense.xml
@@ -34,6 +34,14 @@
                 android:drawableLeft="@drawable/find_btn"/>
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="热门推荐"
+            android:layout_margin="15dp"
+            android:textSize="18dp"
+            android:textColor="@color/black"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
