--- a/app/src/main/res/layout/activity_detail_chinese_history.xml
+++ b/app/src/main/res/layout/activity_detail_chinese_history.xml
@@ -12,7 +12,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="30dp">
         <TextView
             android:id="@+id/share_content"
             android:layout_gravity="right"
@@ -21,15 +21,26 @@
             android:layout_height="wrap_content"
             android:drawableRight="@drawable/share"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <WebView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/webView"/>
 
-   <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-       <TextView
-           android:id="@+id/detail_content_tv"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           />
-   </ScrollView>
+    </LinearLayout>
+
+
+
+<!--   <ScrollView-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="match_parent">-->
+<!--       <TextView-->
+<!--           android:id="@+id/detail_content_tv"-->
+<!--           android:layout_width="match_parent"-->
+<!--           android:layout_height="wrap_content"-->
+<!--           />-->
+<!--   </ScrollView>-->
 
 </LinearLayout>
